Sat Jul 18 00:23:47 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/readline/readline.c (Init_readline): rl_catch_signals does
	  not exist on some platform like Mac OS X 10.5.

	* ext/readline/extconf.rb: checks existance of rl_catch_signals.

Fri Jul 17 22:29:21 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): use rl_catch_sigwinch only
	  when existing.

	* ext/readline/extconf.rb: check existance of rl_catch_sigwinch, and
	  workaround for native Win32 readline port.

Fri Nov 28 17:52:26 2008  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/foerwardable.rb: should be usable def_single_delegator for
	  Class and Module.
	  [ruby-dev:38815]

Thu Jul 16 18:28:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id.c (Init_id), vm.c (vm_exec): @#__ThrowState__ is no longer
	  used.  [ruby-dev:38760]

Thu Jul 16 08:56:32 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): re-fix GC problem.

Wed Jul 15 23:45:11 2009  Koichi Sasada  <ko1@atdot.net>

	* dir.c (push_glob): fix GC problem.

Tue May  5 10:42:28 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Update to JSON 1.1.4.

Wed Jul 15 16:29:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (LIBPATHFLAG): path is already quoted in mkmf.rb.

Tue Jul 14 17:29:20 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_index_m): return nil if pos is out of string.
	  [ruby-core:23660]

Tue Jul 14 01:06:31 2009  Yusuke Endoh  <mame@tsg.ne.jp>

 	* enumerator.c (yielder_yield_i): use rb_proc_new instead of
 	  rb_iterate.  [ruby-dev:38518]
 
 	* README.EXT: rb_iterate is obsolete since 1.9; use rb_block_call
 	  instead.
 
 	* README.EXT.ja: ditto.

Mon Jul 13 22:49:50 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/prime.rb (Prime#prime_division): now decomposes
	  negative integer into a decomposition with element [-1, 1].

	* test/test_prime.rb: test for it.

Mon Jul 13 22:28:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
