@@ -1,12 +1,13 @@
 #define RUBY_VERSION "1.9.1"
-#define RUBY_RELEASE_DATE "2009-07-27"
-#define RUBY_PATCHLEVEL 244
+#define RUBY_PATCHLEVEL 245
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
+
 #define RUBY_RELEASE_YEAR 2009
 #define RUBY_RELEASE_MONTH 7
 #define RUBY_RELEASE_DAY 27
+#define RUBY_RELEASE_DATE "2009-07-27"
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
