@@ -1,3 +1,11 @@
+Sat Jul 18 06:30:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/win32.h: include winsock headers in extern "C++" for
+	  C++ extension libraries.
+
+	* include/ruby/missing.h (vsnprintf): workaround for VC++.
+	  [ruby-core:23096]
+
 Sat Jul 18 00:23:47 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* ext/readline/readline.c (Init_readline): rl_catch_signals does
